--- a/recommendation_model.ipynb
+++ b/recommendation_model.ipynb
@@ -21,7 +21,7 @@
         "# Surabaya Tourism Destination Recommendation System\n",
         "\n",
         "- Nama  : Labiba Adinda Zahwana\n",
-        "- Email : labibaadinda"
+        "- Email : labibaadinda11@gmail.com"
       ],
       "metadata": {
         "id": "_tIpbCzTc0AT"
